# hlavi-core

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: auto-release.yml  ci.yml  pr-preview.yml  release.yml  tag.yml  version-bump.yml
src/: error.rs  lib.rs
src/domain/: board.rs  mod.rs  sorting.rs  task.rs  ticket.rs
src/storage/: file_storage.rs  mod.rs  sqlite_storage.rs
